adding correct path

--- a/Portfolio-rebuild/mainPage/Portfolio/index.html
+++ b/Portfolio-rebuild/mainPage/Portfolio/index.html
@@ -11,7 +11,7 @@
   <div class="mainContainer1">
     <header>
       <a class="jello animated delay-2s" href="../Resume/Resume.html">Resume</a>
-      <a class="jello animated delay-3s" href="../Contact-Us/contact.html">Contact</a>
+      <!-- <a class="jello animated delay-3s" href="../Contact-Us/contact.html">Contact</a> -->
       <!-- <a class="jello animated delay-4s" href="../about-me/about-me.html">About</a> -->
     </header>
     <main>
