--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="animate.css">
-  <link rel="stylesheet" href="./animated-portfolio.css">
+  <link rel="stylesheet" href="./Portfolio-rebuild/mainPage/Portfolio/animate.css">
+  <link rel="stylesheet" href="./Portfolio-rebuild//mainPage/Portfolio/animated-portfolio.css">
  <!-- <link rel="stylesheet" href="../../../animate.css"> -->
 <body>
   <div class="mainContainer1">
     <header>
-      <a class="jello animated delay-2s" href="../Resume/Resume.html">Resume</a>
+      <a class="jello animated delay-2s" href="./Portfolio-rebuild/mainPage/Resume/Resume.html">Resume</a>
       <!-- <a class="jello animated delay-3s" href="../Contact-Us/contact.html">Contact</a> -->
       <!-- <a class="jello animated delay-4s" href="../about-me/about-me.html">About</a> -->
     </header>
@@ -28,5 +28,5 @@
   </div>
   
 </body>
-<script src="./animated-Portfolio.js"></script>
+<script src="./Portfolio-rebuild/mainPage/Portfolio/animated-Portfolio.js"></script>
 </html>
