--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
       <!-- <a class="jello animated delay-3s" href="../Contact-Us/contact.html">Contact</a> -->
       <!-- <a class="jello animated delay-4s" href="../about-me/about-me.html">About</a> -->
     </header>
+    <a id="a1" href="./Portfolio-rebuild/Projects/Charged/Landing-page/Landing-page.html"></a> 
+    <a id="a2" href="./Portfolio-rebuild/Projects/htmlProjects/movingSquares/movingSquare.html"></a> 
+    <a id="a3" href="./Portfolio-rebuild/Projects/javaScriptProjects/pigLatin/pigLatin.html"></a> 
+    <a id="a4" href="./Portfolio-rebuild/Projects/javaScriptProjects/ticTacToe/tic-tac-toe.html"></a>
     <main>
       <h1>Greatness From Small Beginnings</h1>
       <div id ='htmlCSSContainer' class="projectContainer"></div>
-      <div id = 'javaScriptContainer' class="projectContainer"></div>
+      <div id = 'javaScriptContainer' class="projectContainer">
+      </div>
       <div class="dropDown">
         <!-- <button class="dropButton" id="showHtmlCSSProjects">HTML/CSS Projects</button> -->
         <button class="dropButton" id="showJavaScriptProjects"> Projects</button>
