fixing resume for mobile

--- a/Portfolio-rebuild/mainPage/Resume/Resume.html
+++ b/Portfolio-rebuild/mainPage/Resume/Resume.html
@@ -51,15 +51,19 @@
          <div class="sidePage">
            </section>
            <section class="top" class="education right">
-                   <h3>Education</h3>
+            <h3  class="smallerText">Education</h3>
+               <div class="rotate">
+                <h3  class="smallerText">Education</h3>
                    <ul>
                        <li>Centenail High School - Grauduated -2015</li>
                        <li>Austin Coding Academy - Grauduating 2020</li>
                    </ul>
-               
+                </div>
            </section>
            <section class="bottom" class="Skills right" >
-                   <h3>Skills</h3>
+            <h3  class="smallerText">Skills</h3>
+               <div class="rotate">
+                <h3  class="smallerText">Skills</h3>
                    <ul>
                        <li>HTML</li>
                        <li>CSS</li>
@@ -68,6 +72,7 @@
                        <li>Express</li>
                        <li>mySQL</li>
                    </ul>
+               </div>   
             </section>
             
          </div>
