--- a/Portfolio-rebuild/mainPage/Resume/Resume.html
+++ b/Portfolio-rebuild/mainPage/Resume/Resume.html
@@ -53,7 +53,7 @@
            <section class="top" class="education right">
             <h3  class="smallerText">Education</h3>
                <div class="rotate">
-                <h3  class="smallerText">Education</h3>
+                <h3 >Education</h3>
                    <ul>
                        <li>Centenail High School - Grauduated -2015</li>
                        <li>Austin Coding Academy - Grauduating 2020</li>
@@ -63,7 +63,7 @@
            <section class="bottom" class="Skills right" >
             <h3  class="smallerText">Skills</h3>
                <div class="rotate">
-                <h3  class="smallerText">Skills</h3>
+                <h3>Skills</h3>
                    <ul>
                        <li>HTML</li>
                        <li>CSS</li>
