--- a/Portfolio-rebuild/mainPage/Resume/Resume.html
+++ b/Portfolio-rebuild/mainPage/Resume/Resume.html
@@ -14,7 +14,9 @@
     <div class="header">
       <h1>Michael Matteis</h1>
       <h3>Web Developer</h3>
-    </div>  
+    </div>
+    <a href="">PDF Resume</a>
+    <a href="https://github.com/mikematt23?tab=repositories">GitHub</a>  
 </header>
 <body>
     <section class="objective">
@@ -30,14 +32,14 @@
                     <p>05/2018-(still employed)</p>
                     
                     <p>Responsible for keeping the lumber stock stacked and safe. I would do this with various tools including a
-                    fork lift and pallet jack. Also I was to assist customer with everything from grabing wood and filling orders
-                    to helping plan prodjects such as decks and remodels. Safety is also a important part of the job from
-                    keeping the alise clean and cleared to making suring everything is surcure.</P>
+                    fork lift and pallet jack. Also I was to assist customer with everything from grabbing wood and filling orders
+                    to helping plan projects such as decks and remodels. Safety is also a important part of the job from
+                    keeping the isle clean and cleared to making sure everything is secure.</P>
             </li>
             <li>Sam's Club
                 <p>11/2016 - 11/2017</p>
                 
-                <P>  Responisble for maintaining a clean work space while giving fast and friendly service to the customers. I
+                <P>  Responsible for maintaining a clean work space while giving fast and friendly service to the customers. I
                     also would go help on the sales floor with moving product and restocking. Also maintained the parking lot
                     by bring back carts and throwing sway trash.</P>
             </li>
@@ -45,7 +47,7 @@
     </section>
     <section class="hobby">
         <h1>hobbies</h1>
-        <p>I enjoy creating and building unique things from the ground up. Also like to ticker to make things better. My intrests are cars, (building and upgrading them) music(playing), and of course coding  </p>
+        <p>I enjoy creating and building unique things from the ground up. Also like to tinker to make things better. My interests are cars, (building and upgrading them) music(playing), and of course coding  </p>
     </section>
     <div class="mainContainer">
          <div class="sidePage">
@@ -54,8 +56,8 @@
                <div class="rotate">
                 <h3 >Education</h3>
                    <ul>
-                       <li>Centenail High School - Grauduated -2015</li>
-                       <li>Austin Coding Academy - Grauduating 2020</li>
+                       <li>centennial High School - Graduated -2015</li>
+                       <li>Austin Coding Academy - Graduating 2020</li>
                    </ul>
                 </div>
            </section>
