making resume changes

--- a/Portfolio-rebuild/mainPage/Resume/Resume.html
+++ b/Portfolio-rebuild/mainPage/Resume/Resume.html
@@ -29,10 +29,13 @@
                 
                     <p>05/2018-(still employed)</p>
                     
-                    <p>Responsible for keeping the lumber stock stacked and safe. This is done with various tools including a
-                    fork lift and pallet jack. I also assist customers with many services including: retrieving wood, filling orders, and
-                    helping plan projects such as decks and remodels. I am also accountable for maintaining safety within the store through various means, among them being,
-                    keeping the aisles clean and cleared and making sure everything is secure.</P>
+                    <p>Responsible for keeping the lumber stock, stacked and safe. This is done with various tools including a 
+                       forklift and pallet jack. I also assist customers with many services including retrieving wood, filling 
+                       orders, and helping plan projects such as decks and remodels. I am also accountable for maintaining safety 
+                       within the store through various means, among them being, keeping the aisles clean and cleared and making 
+                       sure everything is secure. Once I moved positions my responsibility went from customer need to store need. 
+                       As a backend clerk I was responsible for making sure products were received correctly and undamaged. 
+                       Once the trucks were unloaded, I would inventory the merchandise.  </P>
             </li>
             <li>Sam's Club
                 <p>11/2016 - 11/2017</p>
